# MoMEMta

./: CMakeLists.txt
ME/: CMakeLists.txt
ME/SubProcesses/P1_Sigma_sm_uux_epvemumvmx/: PROC_SA_sm_0.cc  PROC_SA_sm_0.h
ME/src/: HelAmps_sm.cc  HelAmps_sm.h  Parameters_sm.cc  Parameters_sm.h
MatrixElements/: CMakeLists.txt
MatrixElements/pp_ZZ_bbbb/: CMakeLists.txt
MatrixElements/pp_ZZ_bbbb/SubProcesses/P1_Sigma_sm_uux_bbxbbx/: P1_Sigma_sm_uux_bbxbbx.cc  P1_Sigma_sm_uux_bbxbbx.h
MatrixElements/pp_ZZ_bbbb/include/: HelAmps_sm.h  Parameters_sm.h  SubProcess.h
MatrixElements/pp_ZZ_bbbb/src/: HelAmps_sm.cc  Parameters_sm.cc
MatrixElements/pp_hh_bbbb/: CMakeLists.txt
MatrixElements/pp_ttx_fully_leptonic/include/: HelAmps_sm.h
cmake/modules/: FindPackageHandleStandardArgs.cmake
confs/: example.lua
core/src/: Graph.cc  MoMEMta.cc
examples/: HH_bbbb.cc  HH_bbbb.lua  WW_fullyleptonic.lua  hh_bbbb.cc  hh_bbbb.lua  tt_fullyleptonic.lua
include/: InputTag.h
include/momemta/: ConfigurationSet.h  InputTag.h
modules/: #Boost.cc#  #Flatter.cc#  #MatrixElement.h#  Balance.cc  BlockA.cc  BlockD.cc  BlockF.cc  BlockF.cc~  BuildInitialState.cc  GaussianTransferFunction.cc  MatrixElement.cc  TransferFunctionEvaluator.cc
src/: MoMEMta.cc  main.cc
tests/phaseSpaceVolume/: CMakeLists.txt
